2018 05/10

Returned full_path = os.path.realpath(__file__) (approx. line 342) to support bash scripting of automated runs. This 
remains commented, but can be readily re-activated (remember to comment the next line down).


2018 04/22

1) Completed the isolation of the user interface from the base_class such that all mid-run parameter configurations and 
population summaries are now conducted in menu.pause(), and any associatede executions (Tree validation) are conducted 
fully in the base_class.

	karoo_gp.py imports karoo_gp_base_class.py
		karoo_gp_base_class.py imports karoo_gp_pause.py
		
The user's initial run configuration is conducted in karoo_gp.py. Those settings are passed into karoo_gp_base_class.py
where they are used to guide the run. At each 'pause' (generation, interactive, or debug display modes; or end of run)
the user is taken into menu.pause where additional queries and configurations are conducted. Those value changes are
returned to the base_class where they are executed. When a run is completed (Server or Desktop), the user is returned
to the original karoo_gp.py for salutations and run termination.

Finally, the Karoo GP Python pasta is no longer spaghetti!

2) Modified the function of 'cont' such that it either continues if you yet have additional generations to go, or 
querie the user if gen_id = gen_max and the prior run is done.

3) Replaced 'generation_id' with 'gen_id' and 'generation_max' with 'gen_max'.

4) Conducted a full set of unit tests on every user interface query in menu.pause().

5) Cleaned up the code beneath the user interface (menu.pause), making the while-true loops consistent with those in
karoo_gp_pause.py.

6) Merged 'fx_karoo_continue' into 'fx_karoo_gp' such that a simple while loop maintains an active evolutionary process
until the either the Server script is complete, or the user has terminated the run. This allows for the simple addition